--- a/src/App.css
+++ b/src/App.css
@@ -10,9 +10,21 @@ input {
   border: 1px solid rgb(0, 0, 0);
   padding: 5px;
 }
+.hint{
+    margin-left: 20px;
+ }
 
 .invalid {
   border: 1px solid red;
 }
+.insuccess{
+  border: 1px solid blue;
 
+}
+.error{
+  color: red;
+}
+.success{
+  color: blue;
+}
 /* Add any additional styles as needed */
